add_executable(typeinference_unit_tests)
target_sources(
  typeinference_unit_tests
  PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipAlphaTest.cpp
          ${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipConsTest.cpp
          ${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipFunctionTest.cpp
          ${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipIntTest.cpp
          ${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipMuTest.cpp
          ${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipRecordTest.cpp
          ${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipAbsentFieldTest.cpp
          ${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipRefTest.cpp
          ${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipVarTest.cpp
          ${CMAKE_CURRENT_SOURCE_DIR}/constraints/TypeConstraintCollectTest.cpp
          ${CMAKE_CURRENT_SOURCE_DIR}/constraints/TypeConstraintTest.cpp
          ${CMAKE_CURRENT_SOURCE_DIR}/constraints/AbsentFieldCheckerTest.cpp
          ${CMAKE_CURRENT_SOURCE_DIR}/solvers/UnifierTest.cpp
          ${CMAKE_CURRENT_SOURCE_DIR}/solvers/UnionFindTest.cpp)
target_include_directories(
  typeinference_unit_tests
  PRIVATE ${CMAKE_SOURCE_DIR}/src/error
          ${CMAKE_SOURCE_DIR}/src/frontend/ast
          ${CMAKE_SOURCE_DIR}/src/frontend/ast/treetypes
          ${CMAKE_SOURCE_DIR}/src/semantic/symboltable
          ${CMAKE_SOURCE_DIR}/src/semantic/types/concrete
          ${CMAKE_SOURCE_DIR}/src/semantic/types/constraints
          ${CMAKE_SOURCE_DIR}/src/semantic/types/solver
          ${CMAKE_SOURCE_DIR}/test/unit/helpers
          ${CMAKE_SOURCE_DIR}/test/unit/matchers)
target_link_libraries(
  typeinference_unit_tests
  PRIVATE antlr4_static
          ${llvm_libs}
          ast
          types
          symboltable
          frontend
          semantic
          codegen
          optimizer
          error
          test_helpers
          coverage_config
          Catch2::Catch2WithMain)
